--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="left-side">
+    <div class="pokedex">
+      <div class="left-side"></div>
+      <div class="right-side"></div>
     </div>
   </body>
 </html>
