Definición de parte derecha frontal y trasera

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <div class="pokedex">
       <div class="left-side"></div>
-      <div class="right-side"></div>
+      <div class="right-side-back"></div>
+      <div class="right-side-front"></div>
     </div>
   </body>
 </html>
