Botones en parte izquierda

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   </head>
   <body>
     <div class="pokedex">
-      <div class="left-side"></div>
-      <div class="right-side-back"></div>
-      <div class="right-side-front"></div>
+      <div class="left side">
+        <div class="buttons-area">
+          <div class="btn main"></div>
+          <div class="btn first"></div>
+          <div class="btn second"></div>
+          <div class="btn third"></div>
+        </div>
+      </div>
+      <div class="right-back side"></div>
+      <div class="right-front side"></div>
     </div>
   </body>
 </html>
