Cambio de clases btn por led y asignacion de borde a las partes de la pokedex

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="pokedex">
       <div class="left side">
-        <div class="buttons-area">
-          <div class="btn main"></div>
-          <div class="btn first"></div>
-          <div class="btn second"></div>
-          <div class="btn third"></div>
+        <div class="led-area">
+          <div class="led main"></div>
+          <div class="led first"></div>
+          <div class="led second"></div>
+          <div class="led third"></div>
         </div>
       </div>
       <div class="right-back side"></div>
