Agregando pestañas a la parte derecha

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
           <div class="led third"></div>
         </div>
       </div>
-      <div class="right-back side"></div>
-      <div class="right-front side"></div>
+      <div class="right-back side">
+        <div class="right-back-tab"></div>
+      </div>
+      <div class="right-front side">
+        <div class="right-front-tab"></div>
+      </div>
     </div>
   </body>
 </html>
