Ajuste de clases tab para las pestañas

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
       </div>
       <div class="right-back side">
-        <div class="right-back-tab"></div>
+        <div class="tab back-tab"></div>
       </div>
       <div class="right-front side">
-        <div class="right-front-tab"></div>
+        <div class="tab front-tab"></div>
       </div>
     </div>
   </body>
