Triángulo amarillo en la parte frontal

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
+        <div class="triangle"></div>
       </div>
     </div>
   </body>
