Detalles en Led principal, Bordes y definición de variables para almacenar colores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="pokedex">
       <div class="left side">
         <div class="led-area">
-          <div class="led main"></div>
+          <div class="led border-main">
+            <div class="led main"></div>
+          </div>
           <div class="led first"></div>
           <div class="led second"></div>
           <div class="led third"></div>
