Agregando pantalla de la Pokedex

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="led second"></div>
           <div class="led third"></div>
         </div>
+        <div class="display-border"></div>
       </div>
       <div class="right-back side">
         <div class="tab back-tab"></div>
