Luces superiores en pantalla

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           <div class="led second"></div>
           <div class="led third"></div>
         </div>
-        <div class="display-border"></div>
+        <div class="display-border">
+          <div class="display-top-leds-area">
+            <div class="left led"></div>
+            <div class="right led"></div>
+          </div>
+        </div>
       </div>
       <div class="right-back side">
         <div class="tab back-tab"></div>
