Pantalla y ajsute de tamaño en borde de pantalla

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="left led"></div>
             <div class="right led"></div>
           </div>
+          <div class="display"></div>
         </div>
       </div>
       <div class="right-back side">
