--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <div class="right led"></div>
           </div>
           <div class="display"></div>
+          <div class="speaker">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
       <div class="right-back side">
