Pestala interna en borde de pantalla

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="line"></div>
             <div class="line"></div>
           </div>
+          <div class="internal-tab"></div>
         </div>
       </div>
       <div class="right-back side">
