Botón inferior de la pantalla

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="line"></div>
           </div>
           <div class="internal-tab"></div>
+          <div class="display-bottom-led"></div>
         </div>
       </div>
       <div class="right-back side">
