Botones Select y Start

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
           <div class="internal-tab"></div>
           <div class="display-bottom-led"></div>
         </div>
+        <div class="buttons-area">
+          <div class="select-start left"></div>
+          <div class="select-start right"></div>
+        </div>
       </div>
       <div class="right-back side">
         <div class="tab back-tab"></div>
