Botón negro izquierda

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="buttons-area">
           <div class="select-start left"></div>
           <div class="select-start right"></div>
+          <div class="black-btn-left"></div>
         </div>
       </div>
       <div class="right-back side">
