Pantalla inferior izquierda y ajuste ubicación de  botones

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <div class="select-start left"></div>
           <div class="select-start right"></div>
           <div class="black-btn-left"></div>
+          <div class="left-bottom-display"></div>
         </div>
       </div>
       <div class="right-back side">
