Cruceta direccional y ajuste de posición de botones

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
           <div class="select-start right"></div>
           <div class="black-btn-left"></div>
           <div class="left-bottom-display"></div>
+          <div class="d-pad">
+            <div class="horizontal"></div>
+            <div class="vertical"></div>
+            <div class="no-border"></div>
+            <div class="center"></div>
+          </div>
         </div>
       </div>
       <div class="right-back side">
