Efecto en botones

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <div class="display-bottom-led"></div>
         </div>
         <div class="buttons-area">
-          <div class="select-start left"></div>
-          <div class="select-start right"></div>
-          <div class="black-btn-left"></div>
+          <div class="select-start left btn"></div>
+          <div class="select-start right btn"></div>
+          <div class="black-btn-left btn"></div>
           <div class="left-bottom-display"></div>
           <div class="d-pad">
             <div class="horizontal"></div>
