Pantalla lado izquierdo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
       <div class="right-back side">
         <div class="tab back-tab"></div>
+        <div class="left-display"></div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
