Barra de botones lado derecho

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       <div class="right-back side">
         <div class="tab back-tab"></div>
         <div class="left-display"></div>
+        <div class="blue-btn-area">
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+          <div class="btn"></div>
+        </div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
