--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           <div class="btn"></div>
           <div class="btn"></div>
         </div>
+        <div class="gray-btn-area">
+          <div class="btn"></div>
+          <div class="btn"></div>
+        </div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
