Botón amarillo lado derecho

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div class="btn"></div>
           <div class="btn"></div>
         </div>
+        <div class="yellow-led"></div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
