Área de ingreso de texto para consultas

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
           <div class="btn"></div>
         </div>
         <div class="yellow-led"></div>
+        <div class="number input"></div>
+        <div class="name input"></div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
