Agregando formularios de consulta

--- a/index.html
+++ b/index.html
@@ -69,8 +69,16 @@
           <div class="btn"></div>
         </div>
         <div class="yellow-led"></div>
-        <div class="number input"></div>
-        <div class="name input"></div>
+        <div>
+          <form id="number-form" action="">
+            <input class="number input" type="text" name="" value="" placeholder="Ingresa el número">
+          </form>
+        </div>
+        <div>
+          <form id="name-form" action="">
+            <input class="name input" type="text" name="" value="" placeholder="Ingresa el nombre">
+          </form>
+        </div>
       </div>
       <div class="right-front side">
         <div class="tab front-tab"></div>
