Agregando consulta de Pokemon por número

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <div class="yellow-led"></div>
         <div>
           <form id="number-form" action="">
-            <input class="number input" type="text" name="" value="" placeholder="Ingresa el número">
+            <input class="number input" type="number" name="id" placeholder="Ingresa el número">
           </form>
         </div>
         <div>
           <form id="name-form" action="">
-            <input class="name input" type="text" name="" value="" placeholder="Ingresa el nombre">
+            <input class="name input" type="text" name="name" placeholder="Ingresa el nombre">
           </form>
         </div>
       </div>
@@ -85,5 +85,6 @@
         <div class="triangle"></div>
       </div>
     </div>
+    <script type="text/javascript" src="js/master.js"></script>
   </body>
 </html>
