Agregando imagen de pokemon en pantalla

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <div class="left led"></div>
             <div class="right led"></div>
           </div>
-          <div class="display"></div>
+          <div class="display">
+            <img src="" alt="" id="image" height="170">
+          </div>
           <div class="speaker">
             <div class="line"></div>
             <div class="line"></div>
