Agregando descripción del Pokemon

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       </div>
       <div class="right-back side">
         <div class="tab back-tab"></div>
-        <div class="left-display"></div>
+        <div class="">
+          <textarea class="left-display" id="textarea" readonly></textarea>
+        </div>
         <div class="blue-btn-area">
           <div class="btn"></div>
           <div class="btn"></div>
