Agregando clase is-active para mantener la cubierta de la Pokedex abierta en una consulta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="pokedex">
+    <div class="pokedex" id="pokedex">
       <div class="left side">
         <div class="led-area">
           <div class="led border-main">
